<resources>
    <string name="app_name">Calc</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="div">/</string>
    <string name="pow">*</string>
    <string name="back">Back</string>
    <string name="clear">Clear</string>
    <string name="empty_text"> </string>
<!--    <string name="back">&#8592;</string>-->
    <string name="equals">=</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="hint_input">Type here</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="extended">Extended</string>
    <string name="plain">Plain</string>
</resources>
